Chapter 9: Advanced login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,4 @@ en:
   setting: "setting"
   log_out: "Log Out"
   invalid_email_password: "Invalid Email or Password"
+  remember_me: "Remember me on this computer"
