Chapter 10: Updating, showing, and deleting users
Chapter 10: Updating, showing, and deleting users

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -36,3 +36,14 @@ vi:
   log_out: "Đăng xuất"
   invalid_email_password: "Email hoặc mật khẩu không chính xác!"
   remember_me: "Duy trì đăng nhập trên thiết bị này"
+  update_your_profile: "Cập nhật thông tin tài khoản"
+  edit_user: "Cập nhật thông tin"
+  save_changes: "Lưu thay đổi"
+  update_user_fail: "Cập nhật không thành công"
+  profile_updated: "Cập nhật thông tin tài khoản thành công!"
+  please_login: "Xin hãy đăng nhập!"
+  all_users: "Danh sách người dùng"
+  delete?: "Xóa"
+  are_you_sure?: "Bạn có chắc không?"
+  user_deleted: "Đã xoá tài khoản"
+  delete_user_fail: "Xóa tài khoản thất bại"
