--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,14 @@ en:
   log_out: "Log Out"
   invalid_email_password: "Invalid Email or Password"
   remember_me: "Remember me on this computer"
+  update_your_profile: "Update your profile"
+  edit_user: "Edit user"
+  save_changes: "Save changes"
+  update_user_fail: "Update failed"
+  profile_updated: "Profile updated"
+  please_login: "Please login!"
+  all_users: "All users"
+  delete?: "Delete"
+  are_you_sure?: "Are you sure?"
+  user_deleted: "User deleted!"
+  delete_user_fail: "Delete user failed"
