Chapter 11: Account activation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,5 +45,14 @@ en:
   all_users: "All users"
   delete?: "Delete"
   are_you_sure?: "Are you sure?"
+  account_activated: "Account activated!"
+  invalid_activation_link: "Invalid activation link"
+  not_activated: "Account not activated. Check your email for the activation link."
+  check_email_to_active: "Please check your email to activate your account."
+  activated: "Account activated!"
+  invalid_activation: "Invalid activation link"
+  account_activation: "account_activation"
+  activate: "Activate"
   user_deleted: "User deleted!"
   delete_user_fail: "Delete user failed"
+  mail_welcome: "Welcome to the Sample App! Click on the link below to activate your account:"
