--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -45,5 +45,14 @@ vi:
   all_users: "Danh sách người dùng"
   delete?: "Xóa"
   are_you_sure?: "Bạn có chắc không?"
+  account_activated: "Tài khoản đã được kích hoạt!"
+  invalid_activation_link: "Link kích hoạt không hợp lệ!"
+  not_activated: "Tài khoản chưa được kích hoạt. Kiểm tra email để kích hoạt!"
+  check_email_to_active: "Kiểm tra email để kích hoạt tài khoản."
+  activated: "Tài khoản đã được kích hoạt!"
+  invalid_activation: "Link kích hoạt không hợp lệ!"
+  account_activation: "Kích hoạt tài khoản"
+  activate: "Kích hoạt"
   user_deleted: "Đã xoá tài khoản"
   delete_user_fail: "Xóa tài khoản thất bại"
+  mail_welcome: "Xin chào! Click vào link bên dưới để kích hoạt tài khoản: "
