Chapter 8: Basic login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,8 +21,17 @@ en:
   sample_app: "sample Application"
   intro_signup: "This will be a signup page for new users."
   error: "Error"
+  user: "User"
   user_not_found: "User not found!"
   create_user_success: "User created successfully!"
   create_user_fail: "User created failed!"
   submit_create_user: "Create my account"
   form_errors: "The form contains "
+  password: "Password"
+  new_user?: "New user? "
+  sign_up_now!: "Sign Up Now!"
+  account: "Account"
+  profile: "Profile"
+  setting: "setting"
+  log_out: "Log Out"
+  invalid_email_password: "Invalid Email or Password"
