--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -21,8 +21,17 @@ vi:
   sample_app: "chương trình mẫu."
   intro_signup: "Đăng ký cho người dùng mới"
   error: "Lỗi"
+  user: "Tài khoản"
   user_not_found: "Không tìm thấy tài khoản"
   create_user_success: "Tạo tài khoản thành công"
   create_user_fail: "Tạo tài khoản không thành công"
   submit_create_user: "Tạo tài khoản"
   form_errors: "Dữ liệu nhập vào có "
+  password: "Mật khẩu"
+  new_user?: "Chưa có tài khoản? "
+  sign_up_now!: "Đăng ký ngay!"
+  account: "Tài khoản"
+  profile: "Thông tin"
+  setting: "Cài đặt"
+  log_out: "Đăng xuất"
+  invalid_email_password: "Email hoặc mật khẩu không chính xác!"
