Chapter 12: Password reset

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -56,3 +56,15 @@ vi:
   user_deleted: "Đã xoá tài khoản"
   delete_user_fail: "Xóa tài khoản thất bại"
   mail_welcome: "Xin chào! Click vào link bên dưới để kích hoạt tài khoản: "
+  email_password_reset: "Kiểm tra email để lấy lại mật khẩu"
+  email_not_found: "Địa chỉ email không tồn tại"
+  cant_empty: "Không thể để trống"
+  password_reseted: "Mật khẩu đã được cập nhật"
+  password_expired: "Mã xác minh mật khẩu đã hết hạn"
+  password_reset: "Lấy lại mật khẩu"
+  submit: "Xác nhận"
+  forgot_password: "Quên mật khẩu?"
+  update_password: "Cập nhật mật khẩu"
+  click_to_reset: "Click vào đường link bên dưới để lấy lại mật khẩu "
+  expire_time: "Link có hiệu lực trong vòng 2h."
+  ignore_email: "Nếu bạn không gửi yêu cầu cấp lại mật khẩu, hãy bỏ qua email này, mật khẩu của bạn sẽ được giữ nguyên."
