--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,3 +56,16 @@ en:
   user_deleted: "User deleted!"
   delete_user_fail: "Delete user failed"
   mail_welcome: "Welcome to the Sample App! Click on the link below to activate your account:"
+  email_password_reset: "Email sent with password reset instructions"
+  email_not_found: "Email address not found"
+  cant_empty: "Can't be empty"
+  password_reseted: "Password has been reset"
+  password_expired: "Password reset has expired."
+  password_reset: "Password reset"
+  submit: "Submit"
+  forgot_password: "Forgot Password?"
+  update_password: "Update password"
+  click_to_reset: "To reset your password click the link below: "
+  expire_time: "This link will expire in two hours."
+  ignore_email: "If you did not request your password to be reset, please ignore this
+email and your password will stay as it is."
