Chapter 13: User micropost

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,9 @@ en:
         email: "Email"
         password: "Password"
         password_confirmation: "Confirmation"
+      micropost:
+        content: "Content"
+        image: "Image"
   home: "Home"
   about: "About"
   contact: "Contact"
@@ -67,5 +70,17 @@ en:
   update_password: "Update password"
   click_to_reset: "To reset your password click the link below: "
   expire_time: "This link will expire in two hours."
-  ignore_email: "If you did not request your password to be reset, please ignore this
-email and your password will stay as it is."
+  ignore_email: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+  micropost_created: "Microropost created!"
+  micropost_deleted: "Micropost deleted!"
+  deleted_fail: "Deleted fail"
+  micropost_invalid: "Micropost invalid"
+  compose_micropost: "Compose new micropost..."
+  post: "Post"
+  view_my_profile: "View my profile"
+  micropost: "Micropost"
+  posted: "Posted"
+  ago: "ago."
+  micropost_feed: "Micropost Feed"
+  must_be_valid: "must be a valid image format"
+  oversize_image: "should less than 5MB"
