--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -8,6 +8,9 @@ vi:
         email: "Email"
         password: "Mật khẩu"
         password_confirmation: "Xác nhận mật khẩu"
+      micropost:
+        content: "Nội dung"
+        image: "Hình ảnh"
   home: "Trang chủ"
   about: "Giới thiệu"
   contact: "Liên hệ"
@@ -68,3 +71,16 @@ vi:
   click_to_reset: "Click vào đường link bên dưới để lấy lại mật khẩu "
   expire_time: "Link có hiệu lực trong vòng 2h."
   ignore_email: "Nếu bạn không gửi yêu cầu cấp lại mật khẩu, hãy bỏ qua email này, mật khẩu của bạn sẽ được giữ nguyên."
+  micropost_created: "Bài viết đã được tạo!"
+  micropost_deleted: "Đã xóa bài viết!"
+  deleted_fail: "Xóa không thành công"
+  micropost_invalid: "Bài viết không tồn tại"
+  compose_micropost: "Đăng bài viết mới..."
+  post: "Đăng"
+  view_my_profile: "Xem trang cá nhân của tôi"
+  micropost: "Bài viết"
+  posted: "Đã đăng"
+  ago: "trước."
+  micropost_feed: "Danh sách bài đăng"
+  must_be_valid: "Không đúng định dạng"
+  oversize_image: "Dung lượng phải nhỏ hơn 5MB"
