--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,13 @@
 en:
+  activerecord:
+    models:
+      user: "User"
+    attributes:
+      user:
+        name: "Name"
+        email: "Email"
+        password: "Password"
+        password_confirmation: "Confirmation"
   home: "Home"
   about: "About"
   contact: "Contact"
@@ -11,3 +20,9 @@ en:
   intro: "This is the homepage for the"
   sample_app: "sample Application"
   intro_signup: "This will be a signup page for new users."
+  error: "Error"
+  user_not_found: "User not found!"
+  create_user_success: "User created successfully!"
+  create_user_fail: "User created failed!"
+  submit_create_user: "Create my account"
+  form_errors: "The form contains "
